Dashboard+Report+Notifications+Settings DONE !!!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">PNM</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_profile">Profile</string>
-    <string name="title_contact">Contact</string>
     <string name="title_report">Report</string>
+    <string name="title_profile">Settings</string>
+    <string name="title_contact">Notifications</string>
 </resources>
