--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PNM</string>
+    <string name="app_name">SLWM</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_report">Report</string>
     <string name="title_profile">Settings</string>
